--- a/index_prod.html
+++ b/index_prod.html
@@ -5,15 +5,15 @@
     <title>iView project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <link rel="stylesheet" href="./dist/main.311da870f9fd80c90db3.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_875781_1lehbc71c4z.css">
+    <link rel="stylesheet" href="./dist/main.807b3c5222c230104c9a.css">
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_875781_1lehbc71c4z.css"> -->
     <script src='http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js'></script>
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="./dist/vendors.311da870f9fd80c90db3.js"></script>
-    <script type="text/javascript" src="./dist/main.311da870f9fd80c90db3.js"></script>
+    <script type="text/javascript" src="./dist/vendors.807b3c5222c230104c9a.js"></script>
+    <script type="text/javascript" src="./dist/main.807b3c5222c230104c9a.js"></script>
 </body>
 
 </html>
